src/Runtime/StudioGateway/infra/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studio-gateway-internal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: studio-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: studio-gateway
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: studio-gateway
