src/Runtime/StudioGateway/infra/kustomize/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: studio-gateway
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`${SERVICEOWNER_ID}.apps.altinn.no`) && PathPrefix(`/runtime/gateway/api/v1`)
      kind: Rule
      services:
        - name: studio-gateway
          port: 80
